--- a/digztr/src/routes/ListingList/ListingList.css
+++ b/digztr/src/routes/ListingList/ListingList.css
@@ -1,3 +1,718 @@
-#list-view {
-  margin-top: 100px;
+
+#section-01 div.content{
+  padding: 20px;
+  margin-top: 70px;
+}
+
+
+#section-02 .card{
+  box-shadow: 1px 1px 10px #4c4c4c;
+
+  height: 250px;
+}
+#section-02 .card-img-container{
+  width: 100%;
+  overflow: hidden;
+}
+#section-02 .card-img-container img{
+  width: 100%;
+  height: 100%;
+}
+#section-02 .card-img-container .caption{
+  position: relative;
+  text-align: center;
+  color: white;
+  margin-top: 4px;
+}
+#section-02 div.row {
+  margin-top: 20px;
+  width:100%;
+}
+
+#section-02 .icon{
+  border-radius: 50%;
+  background-color: gray;
+  width:70px;
+   border-style: solid;
+    border-color: black
+
+}
+
+#section-03{
+ margin-top: 20px;
+ margin-left: 10px;
+}
+#section-03 .card{
+  box-shadow: 1px 1px 10px #4c4c4c;
+}
+#section-03 .card-title{
+  padding: 8px;
+}
+#section-03 .card-title h5{
+  font-size: 13px;
+}
+#section-03 .card-content{
+  padding: 20px 20px 20px 20px;
+  background-color: white;
+}
+#section-03 .card-content .row{
+  margin-bottom: 10px;
+}
+
+select{
+  margin-bottom: 6px;
+  padding:8px;
+  width: 100%;
+
+}
+
+.sortby{
+  width: 100%;
+  border-radius: 25px;
+  height: 40px;
+  padding: 10px;
+}
+
+.section-margin{
+  margin: 10px 50px 60px 50px;
+}
+.aa{
+  width:100%;
+margin-right: 0px !important;
+}
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+
+  margin-right:50px;
+  border:1px solid grey;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+h1,h2,h3,h4,h5{
+  margin-bottom: 5px;
+}
+
+
+.viewType{
+  padding: 7px 15px 7px 15px;
+  margin-left:2px;
+}
+
+
+
+
+/*To Remove Google Maps Footer, Logo and Copyright Labels*/
+a[href^="http://maps.google.com/maps"]{display:none !important}
+a[href^="https://maps.google.com/maps"]{display:none !important}
+
+.gmnoprint a, .gmnoprint span, .gm-style-cc {
+    display:none;
+}
+.gmnoprint div {
+    background:none !important;
+}
+/*end*/
+
+/*Plisting CSS*/
+.no-pad{
+  padding: 0px;
+}
+.no-margin{
+  margin: 0px;
+}
+.margin-bottom-10{
+  margin-bottom: 10px;
+}
+.margin-bottom-20{
+  margin-bottom: 20px;
+}
+.section{
+  margin: 10px 0 50px 0;
+}
+p.sec-title{
+  font-size: 16px;
+  margin-bottom: 0px;
+}
+.wishlist{
+  margin-top: 20px;
+}
+.wishlist span{
+  font-size: 15px;
+}
+h5.sec-title{
+  padding-left: 40px;
+  margin-bottom: 40px;
+}
+h5.sec-secondary-title{
+  padding-left: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+h5.sec-sub-title{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+h5.sec-sub-secondary-title{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+div.note-option{
+  margin-top: 50px !important;
+}
+span.sec-content, a.sec-content{
+  font-size: 15px;
+  line-height: 25px;
+}
+
+.digztr-nav {
+  z-index: 10;
+  margin-bottom: 0px;
+  border-bottom-width: 0px;
+  height:60px;
+  padding: inherit 20px;
+}
+.digztr-nav .active-link div {
+  background-color:#eaeaea;
+}
+.search-btn{
+  margin: 2px;
+  height: 56px;
+  width: 60px;;
+  background: #fc4a1a !important;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #ff9d00, #ff7c19) !important;  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #ff9d00, #ff7c19) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.search-btn img{
+  width: 35px;
+  margin: 10px 12px;
+}
+
+.card-shadow{
+  box-shadow: 1px 1px 10px #d0d0d0;
+}
+.rotate-90{
+/* Safari */
+-webkit-transform: rotate(-90deg);
+
+/* Firefox */
+-moz-transform: rotate(-90deg);
+
+/* IE */
+-ms-transform: rotate(-90deg);
+
+/* Opera */
+-o-transform: rotate(-90deg);
+
+/* Internet Explorer */
+filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+.hr-dig{
+  border-top: dotted 1px; margin: 5px 0;
+}
+#section-02 div.map{
+  height: 180px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.btn-img{
+  margin-left: 10px;
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.house-feature{
+
+}
+.house-feature span{
+  font-size: 15px;
+}
+.feature-text{
+  margin: 0 20px;
+  background: #fc4a1a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #f7b733, #ff7c19);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #f7b733, #ff7c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding: 10px;
+  margin-top: 40px;
+}
+.feature-text p{
+  color: #ffd6b0;
+  font-size: 18px;
+  margin: 0 !important;
+}
+
+.fact-class h5{
+  font-size: 14px;
+  font-weight: bold;
+}
+.fact-class span{
+  font-size: 14px;
+}
+#section-04 .fact{
+  margin-bottom: 20px;
+}
+#section-05 .interior-features-content p{
+  font-size: 16px;
+}
+#section-06 .chart-text{
+  margin-top: 20px;
+  font-size: 17px;
+}
+#section-06 .row .col-xs-3 h5{
+  font-size: 18px;
+}
+#section-06 .row .col-xs-3 span{
+  font-size: 12px;
+}
+
+
+#section-07 .zent-value{
+  margin-top: 20px;
+  padding-left: 40px;
+  font-weight: bold;
+}
+
+#section-09 .doughnut-text{
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -100px;
+  line-height:19px;
+  text-align: center;
+  z-index: 5;
+}
+
+@media (max-width: 900px){
+ #section-09 .doughnut-text b{
+   font-size: 12px;
+  }
+}
+
+#section-10 .map{
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+#section-10 .nf-option img{
+  padding: 20px 0;
+
+}
+#section-10 .nf-item{
+  border-bottom: 1px solid lightgray;
+}
+#section-10 .nf-item-2{
+  height:70px;
+  padding:20px;
+}
+#section-10 .nf-item:hover, #section-10 .nf-item-2:hover{
+  background: #e9e9e9;  /* fallback for old browsers */
+}
+#section-10 .nf-active{
+  background: #fc4a1a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff9d00, #ff7c19);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff9d00, #ff7c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+#section-10 .nf-active:hover{
+  background: #ff9d00;
+}
+
+#section-11{
+  background-color: #efefef;
+}
+#section-11 .container{
+  padding-bottom: 40px;
+}
+#section-11 .card{
+  background-color: white;
+  box-shadow: 0px 0px 15px #999;
+  padding: 5px;
+  margin: 20px;
+}
+#section-11 .card button{
+  font-size: 13px;
+}
+#section-11 .card-footer{
+  padding: 15px 10px 10px 10px;
+}
+#section-11 .card-img-container{
+  height: 150px;
+  width: 100%;
+  overflow: hidden;
+}
+#section-11 .card-img-container img{
+  width: 100%;
+}
+#section-11 .card-img-container .caption{
+  position: relative;
+  text-align: center;
+  color: white;
+  margin-top: 4px;
+}
+
+/* Top left text */
+.top-left {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+/* Top right text */
+.top-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
+
+#section-11 .card-img-container .caption .caption-blue-box{
+  background-color: #273d86;
+  color: #e1e1e1;
+  padding: 5px 10px;
+}
+#section-11 .card-img-container .caption .caption-heart{
+  margin-left: 30%;
+  float:right;
+}
+#section-11 .card-content{
+  margin-top: 10px;
+}
+#section-11 .card-content p{
+  font-size: 13px;
+  margin: 0;
+  color: #666
+}
+#section-11 .card-content span{
+  font-size: 11px;
+  color: #a5a5a5
+}
+#section-11 .card-content h5{
+  font-size: flex;
+  font-weight: bold;
+}
+#section-11 .card-content b{
+  font-size: 12px;
+  font-weight: normal;
+}
+#section-11 .card-footer button.btn{
+  background: #fc4a1a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff9d00, #ff7c19);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff9d00, #ff7c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #fff7d6;
+}
+#section-12 div.content{
+  padding: 20px;
+  background: #fc4a1a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #ff9d00, #ff7c19);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #ff9d00, #ff7c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+#section-12 h4, #section-12 span, #section-12 input, #section-12 a{
+  color: #fff7d6;
+}
+#section-12 .in-email input{
+  background-color: transparent;
+  border: 0px;
+  width: 100%;
+  text-align: left !important;
+}
+
+#section-12 .btn-subscribe{
+  border: 2px solid #fff7d6;
+  color: #fff7d6;
+  background-color: transparent;
+  padding: 10px 40px;
+  margin-top: 10px;
+}
+#section-13 .content{
+  padding: 50px 90px;
+}
+#section-13 h5{
+  color: #6d6d6d;
+  margin-bottom: 20px;
+}
+#section-13 li{
+  color: #6d6d6d;
+  font-size: 15px;
+  line-height: 30px;
+  list-style-type: square;
+}
+#section-13 ul{
+  padding-left: 18px;
+}
+#section-13 p{
+  color: #6d6d6d;
+}
+
+#sidenav{
+    z-index: 100;
+}
+#sidenav .card{
+  width: 300px;
+  box-shadow: 1px 1px 10px #4c4c4c;
+}
+#sidenav .card-title{
+  padding: 8px;
+}
+#sidenav .card-title h5{
+  font-size: 13px;
+}
+#sidenav .card-content{
+  padding: 10px 10px 10px 10px;
+  background-color: white;
+}
+#sidenav .card-content .row{
+  margin-bottom: 10px;
+}
+#sidenav .call span{
+  font-size: 11px;
+}
+#sidenav .call input{
+  border: 1px solid #273d86;
+  color: #ff7f25;
+}
+#sidenav .forms input, #sidenav .forms textarea{
+  margin-bottom: 8px;
+  font-size: 12px;
+}
+#sidenav .calendar-box{
+  margin: 0 30px;
+}
+#sidenav .calendar-box .item-calendar{
+  width: 47px;
+  height:47px;
+  margin: 0 4px;
+  border-radius: 4px;
+  background-color: #e2e2e2;
+  border: 1px solid #273d86;
+}
+#sidenav .item-calendar .cal-week{
+  font-size: 10px;
+  width: 45px;
+  margin: 0 4px 0 0;
+  border-radius: 3px 3px 0 0;
+}
+#sidenav .item-calendar .cal-day{
+  font-weight: bold;
+  margin: 0px;
+}
+#sidenav .item-calendar .cal-month{
+  font-size: 10px;
+  margin: 0px;
+  margin-top: -3px;
+}
+#sidenav .item-calendar .cal-text{
+  margin: 12px 0;
+}
+#sidenav .item-calendar a:hover{
+  text-decoration: none;
+}
+
+#sidenav .carousel {
+  margin-bottom: 10px;
+}
+
+#sidenav .carousel .item {
+  height: 30px;
+}
+
+#sidenav .carousel-buttons {
+  width: 100%;
+  color:#666;
+  bottom:1px;
+}
+#sidenav .carousel-buttons > div {
+  padding:10px;
+  border:1px solid #666;
+}
+#sidenav .carousel-buttons a {
+  color:#666;
+  display:block;
+  line-height:30px;
+}
+#sidenav .progress{
+  margin: 0 30px;
+  height: 5px;
+}
+#sidenav .progress-bar-success{
+  background-color: #adadad;
+}
+#sidenav .carousel-control.right, .carousel-control.left{
+  background: none;
+  width: 30px;
+  height: 47px;
+}
+#sidenav .profile-pic .img-container{
+  width: 40px;
+  border-radius: 90px;
+  height: 40px;
+  overflow: hidden;
+}
+#sidenav .profile-pic .img-container img{
+  height: 50px;
+}
+/* slider */
+#RGB {
+	background: rgb(128, 128, 128);
+}
+.slider-track{
+  border-radius: 0;
+  border: 2px solid #e8e8e8;
+
+}
+.slider.slider-horizontal{
+  width: 75%;
+}
+.slider-track-high{
+  border-radius: 0;
+  background: #bfbfbf;
+}
+.slider-track-low{
+  border-radius: 0;
+  background: #bfbfbf;
+}
+.slider-selection {
+	background: #ff7f25;
+  border-radius: 0;
+}
+.slider-handle {
+  border-radius: 5px;
+  border: 1px solid white;
+  background: #fc4a1a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff9d00, #ff7c19);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff9d00, #ff7c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+/* doughnut  inner text */
+.donut-inner {
+   margin-top: -100px;
+   margin-bottom: 100px;
+}
+.donut-inner h5 {
+   margin-bottom: 5px;
+   margin-top: 0;
+}
+.donut-inner span {
+   font-size: 12px;
+}
+
+.push-left{
+  float:left;
+}
+
+/* carousel */
+#img-carousel .img-container{
+  position:relative;
+  overflow: hidden;
+}
+#img-carousel .img-container,
+#img-carousel .img-container img,
+#img-carousel .img-container div,
+#img-carousel .overlay{
+  height: 500px;
+}
+#img-carousel .overlay{
+  width: 100%;
+  position: absolute;
+  z-index: 5;
+  background: black;
+  opacity: 0.5;
+}
+#img-carousel .img-c-button{
+  position:absolute;
+  z-index:7;
+  margin-left: 50px;
+  height: 50px;
+  background: #e9e9e9;
+  margin-top: 450px;
+  width: 150px;
+}
+.img-item{
+  position:absolute;
+  display:none;
+}
+.c-img-active{
+  z-index: 6;
+  margin-left: 50px;
+  transition: 0.5s;
+  display:block;
+}
+.c-item-left{
+  z-index: 4;
+  transition: 0.4s;
+  display:block;
+}
+.c-first-right{
+  z-index: 3;
+  margin-left: 20%;
+  transition: 0.4s;
+  display:block;
+}
+.c-second-right{
+  z-index: 2;
+  margin-left: 40%;
+  transition: 0.3s;
+  display:block;
+}
+.c-third-right{
+  z-index: 1;
+  margin-left: 60%;
+  transition: 0.2s;
+  display:block;
 }
