--- a/digztr/src/App.css
+++ b/digztr/src/App.css
@@ -1,7 +1,58 @@
+a {
+  cursor: pointer;
+}
+
 .container {
   padding-right: 10px !important;
   padding-left: 10px !important;
 }
+
+#loginModal .modal-body {
+  padding: 0 15px;
+}
+
+#loginModal .modal-content {
+  width: 400px;
+}
+.btn-white {
+  background-color: white;
+  border: 2px solid #ffae60;
+  color: #ffae60;
+}
+
+.login-title {
+  padding: 0 15px;
+}
+
+.login-title h1 {
+  color: #ffae60;
+  font-size: 25px;
+  text-align: center;
+}
+
+.login-title p {
+  color: #273d86;
+  text-align: center;
+  margin: 15px 0;
+}
+
+.login-form {
+  margin: 25px 0;
+}
+
+.login-submit {
+  margin: 50px 0;
+}
+
+.login-submit button {
+  width: 150px;
+}
+
+#login .links {
+  padding-bottom: 20px;
+  text-align: center;
+}
+
 
 #footer{
   background-color: #273d86;
